@@ -6,6 +6,7 @@ PHP                                                                        NEWS
   . Fixed bug #75679 (Path 260 character problem). (Anatol)
 
 - Opcache:
+  . Fixed bug #75720 (File cache not populated after SHM runs full). (Dmitry)
   . Fixed bug #75579 (Interned strings buffer overflow may cause crash).
     (Dmitry)
 
